finally! move all items anywhere

--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -44,6 +44,7 @@
     "no_notes": "Du hast noch keine Notizen. Erstelle deine erste!",
     "no_notes_yet": "Noch keine Notizen oder Ordner.",
     "create_first": "Erstelle deine erste Notiz oder Ordner!",
+    "drop_to_root": "Hier ablegen für Stammverzeichnis",
     "no_favorites": "Noch keine Favoriten",
     "no_results": "Keine Ergebnisse gefunden",
     "expand_all": "Alle Ordner aufklappen",
@@ -203,7 +204,8 @@
 
   "move": {
     "failed_note": "Verschieben der Notiz fehlgeschlagen.",
-    "failed_folder": "Verschieben des Ordners fehlgeschlagen."
+    "failed_folder": "Verschieben des Ordners fehlgeschlagen.",
+    "failed_media": "Verschieben der Mediendatei fehlgeschlagen."
   },
 
   "search": {
