--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -44,6 +44,7 @@
     "no_notes": "No notes yet. Create your first note!",
     "no_notes_yet": "No notes or folders yet.",
     "create_first": "Create your first note or folder!",
+    "drop_to_root": "Drop here for root",
     "no_favorites": "No favorites yet",
     "no_results": "No results found",
     "expand_all": "Expand all folders",
@@ -203,7 +204,8 @@
 
   "move": {
     "failed_note": "Failed to move note.",
-    "failed_folder": "Failed to move folder."
+    "failed_folder": "Failed to move folder.",
+    "failed_media": "Failed to move media file."
   },
 
   "search": {
