--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -203,7 +203,8 @@
 
   "move": {
     "failed_note": "Не удалось переместить заметку.",
-    "failed_folder": "Не удалось переместить папку."
+    "failed_folder": "Не удалось переместить папку.",
+    "failed_media": "Не удалось переместить медиафайл."
   },
 
   "search": {
