--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -203,7 +203,8 @@
 
   "move": {
     "failed_note": "移动笔记失败。",
-    "failed_folder": "移动文件夹失败。"
+    "failed_folder": "移动文件夹失败。",
+    "failed_media": "移动媒体文件失败。"
   },
 
   "search": {
