--- a/locales/es-ES.json
+++ b/locales/es-ES.json
@@ -214,7 +214,8 @@
     "matches": "{{current}} de {{total}}",
     "match_of": "Coincidencia {{current}} de {{total}}",
     "result_singular": "resultado",
-    "result_plural": "resultados"
+    "result_plural": "resultados",
+    "no_results": "Ninguna nota contiene \"{{query}}\""
   },
 
   "theme": {
