--- a/locales/ja-JP.json
+++ b/locales/ja-JP.json
@@ -213,7 +213,8 @@
     "matches": "{{current}} / {{total}}",
     "match_of": "{{total}}件中{{current}}件目",
     "result_singular": "件",
-    "result_plural": "件"
+    "result_plural": "件",
+    "no_results": "「{{query}}」を含むノートはありません"
   },
 
   "theme": {
