--- a/locales/sl-SI.json
+++ b/locales/sl-SI.json
@@ -213,7 +213,8 @@
     "matches": "{{current}} od {{total}}",
     "match_of": "Zadetek {{current}} od {{total}}",
     "result_singular": "rezultat",
-    "result_plural": "rezultatov"
+    "result_plural": "rezultatov",
+    "no_results": "Nobena beležka ne vsebuje \"{{query}}\""
   },
 
   "theme": {
