--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -213,7 +213,8 @@
     "matches": "{{current}} / {{total}}",
     "match_of": "第 {{current}} 个，共 {{total}} 个",
     "result_singular": "个结果",
-    "result_plural": "个结果"
+    "result_plural": "个结果",
+    "no_results": "没有笔记包含\"{{query}}\""
   },
 
   "theme": {
